# serializer version: 1
# name: test_forecasts[config0-1-weather]
  dict({
    'forecast': list([
      dict({
        'condition': 'cloudy',
        'datetime': '2023-02-17T14:00:00+00:00',
        'temperature': 14.2,
      }),
    ]),
  })
# ---
# name: test_forecasts[config0-1-weather].1
  dict({
    'forecast': list([
      dict({
        'condition': 'cloudy',
        'datetime': '2023-02-17T14:00:00+00:00',
        'temperature': 14.2,
      }),
    ]),
  })
# ---
# name: test_forecasts[config0-1-weather].2
  dict({
    'forecast': list([
      dict({
        'condition': 'fog',
        'datetime': '2023-02-17T14:00:00+00:00',
        'is_daytime': True,
        'temperature': 14.2,
      }),
    ]),
  })
# ---
# name: test_forecasts[config0-1-weather].3
  dict({
    'forecast': list([
      dict({
        'condition': 'cloudy',
        'datetime': '2023-02-17T14:00:00+00:00',
        'temperature': 16.9,
      }),
    ]),
  })
# ---
# name: test_restore_weather_save_state
  dict({
    'last_apparent_temperature': None,
    'last_cloud_coverage': None,
    'last_dew_point': None,
    'last_humidity': '25.0',
    'last_ozone': None,
    'last_pressure': None,
    'last_temperature': '15.0',
    'last_visibility': None,
    'last_wind_bearing': None,
    'last_wind_gust_speed': None,
    'last_wind_speed': None,
  })
# ---
# name: test_trigger_weather_services[config0-1-template]
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2023-10-19T06:50:05-07:00',
        'precipitation': 20.0,
        'temperature': 20.0,
        'templow': 15.0,
      }),
    ]),
  })
# ---
# name: test_trigger_weather_services[config0-1-template].1
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2023-10-19T06:50:05-07:00',
        'precipitation': 20.0,
        'temperature': 20.0,
        'templow': 15.0,
      }),
    ]),
  })
# ---
# name: test_trigger_weather_services[config0-1-template].2
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2023-10-19T06:50:05-07:00',
        'is_daytime': True,
        'precipitation': 20.0,
        'temperature': 20.0,
        'templow': 15.0,
      }),
    ]),
  })
# ---
